--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,37 +7,37 @@ body {
   background-color: #ffffff;
 }
 
-.container {
+.main-container {
   width: 60%;
   height: 100vh;
   padding: 20px;
   text-align: left ;
   box-sizing: border-box;
-  border: 1px solid rgb(213, 213, 213);
+  border: 1px solid rgb(213, 213, 213); /* Add this to each div*/
   background-color: #ffffff;
   overflow-y: auto;
 }
 
 @media (max-width: 1200px) {
-  .container {
+  .main-container {
     width: 70%;
   }
 }
 
 @media (max-width: 992px) {
-  .container {
+  .main-container {
     width: 80%;
   }
 }
 
 @media (max-width: 768px) {
-  .container {
+  .main-container {
     width: 90%;
   }
 }
 
 @media (max-width: 576px) {
-  .container {
+  .main-container {
     width: 100%;
   }
 }
@@ -50,13 +50,35 @@ body {
 
 h1 {
   font-family: 'Inter', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   color: #18181B;
-  font-size: clamp(1.5rem, 5vw, 2rem);
+  font-size: 24px;
+  margin-top: 30px;
+  margin-bottom: 16px;
+}
+
+h2 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  color: #18181B;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 16px;
 }
 
 p {
   font-family: 'Inter', sans-serif;
-  font-weight: 200; 
+  font-weight: 400; 
   color: #71717A;
+  font-size: 14px;
+}
+
+hr {
+  height: 1px;
+  background-color:#f3f3f3;
+  border: none;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-right: 0px;
+  margin-left: 0px;
 }
